# uuid4

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  idf_component.yml
.github/workflows/: tarball.yaml
example/: build.sh
include/uuid4/: uuid4.h
src/: uuid4.c
tools/: clean_install.sh
